[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/world/entity/MovingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/projectile/Projectile.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=3]

[node name="Projectile" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="HitBox" parent="." index="1" instance=ExtResource( 3 )]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="hit_dealt" from="HitBox" to="." method="_on_HitBox_hit_dealt"]
